app/assets/stylesheets/common.css.scss
@import "bootstrap";
    
::selection {
    background: #efb7a7;
    color: #fff;
}

::-moz-selection {
    background: #efb7a7;
    color: #fff;
}

html {
    height: 100%;
    min-height: 100%;
}

body {
    width: 100%;
    height: 100%;
    min-height: 100%;
    background-color: transparent;
    color: #000;
    font-family: 'Century Gothic', verdana, arial, helvetica, sans-serif;
    font-size: 13px;
    line-height: 18px;
}

p, ol, ul, td {
    font-family: 'Century Gothic', verdana, arial, helvetica, sans-serif;
    font-size: 13px;
    line-height: 18px;
}

a {
    color: #f5f4e6;
    text-decoration: none;
  
    &:visited {
        color: #f5f4e6;
    }
  
    &:hover {
        color: #B80033;
    }
}

.bg-img {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background: no-repeat center center fixed;
    @include background-size(cover);
    z-index: -2;
}

#page-wrapper {
    width: 100%;
    height: 100%;
    min-height: 100%;
    overflow: auto;
    z-index: 1;
}

#page-content {
    width: 100%;
    height: 100%;
    min-height: 100%;
    display: table;
}

#top-menu, #bottom-menu {
    background-color: #B80033;
    background-color: rgba(184, 0, 51, .9);
    
    display: table-row;
    padding: 0;
    width: 100%;
    
    .content {
        display: table-cell;
    }
}

#top-menu {
    top: 0;
    
    .content {
        border-bottom: 1px solid #B4808F;
        box-shadow: 0px 10px 15px rgba(0, 0, 0, .4);
        padding: 30px 30px 3px 30px;
    
        div {
            float: right;
            padding-top: 32px;
            text-align: right;
        
            a {
                position: relative;
                display: inline-block;
                font-size: 14px;
                font-weight: bold;
                color: #f5f4e6;
                text-decoration: none;
                padding: 10px;
                
                &:hover {
                    background-color: #E99924;
                    color: #595757;
                    text-decoration: none;
            
                    &:before {
                        color: #f5f4e6;
                    }
                }
                
                &:before {
                    content: "|";
                    position: absolute;
                    left: -6px;
                }
                
                &:first-child {
                    &:before {
                        content: "";
                    }
                }
            }
        }
    }
    
    img {
        padding-bottom: 17px;
    }
}

#page-body {
    width: 100%;
    height: 100%;
    min-height: 100%;
    max-height: 100%;
    display: table-row;
    top: 104px;
    bottom: 79px;
    overflow: hidden;
    
    & > div {
        height: auto;
        min-height: 100%;
        max-height: 100%;
        display: table-cell;
        background-color: rgba(245, 226, 146, .2);
        padding: 50px;
        overflow: hidden;
    }
}

#bottom-menu {
    bottom: 0;
    color: #000;
    font-size: 15px;
    font-weight: bold;
    
    .content {
        border-top: 1px solid #B4808F;
        box-shadow: 0px -10px 15px rgba(0, 0, 0, .4);
        padding: 20px;
    }
    
    a {
        color: #000;
        text-decoration: none;
        display: inline-block;
        padding: 10px;
        position: relative;
        
        &:hover {
            color: #f5f4e6;
            text-decoration: none;
            
            &:before {
                color: #000;
            }
        }
            
        &:before {
            content: "|";
            position: absolute;
            left: -6px;
        }
        
        &:first-child {
            &:before {
                content: "";
            }
        }
    }
}

// Auto Generated Stuff

pre {
    background-color: #eee;
    padding: 10px;
    font-size: 11px;
}

div {
    &.field, &.actions {
        margin-bottom: 10px;
    }
}

#notice {
    color: green;
}

.field_with_errors {
    padding: 2px;
    background-color: red;
    display: table;
}

#error_explanation {
    width: 450px;
    border: 2px solid red;
    padding: 7px;
    padding-bottom: 0;
    margin-bottom: 20px;
    background-color: #f0f0f0;
  
    h2 {
        text-align: left;
        font-weight: bold;
        padding: 5px 5px 5px 15px;
        font-size: 12px;
        margin: -7px;
        margin-bottom: 0px;
        background-color: #c00;
        color: #fff;
    }
  
    ul li {
        font-size: 12px;
        list-style: square;
    }
}

